kubernetes-networks/canary-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
      stage: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
        stage: prod
    spec:
      containers:
      - name: web
        image: max2l/nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-pre-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      stage: pre-prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      name: web
      labels:
        app: web
        stage: pre-prod
    spec:
      containers:
      - name: web
        image: max2l/nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
