kubernetes-networks/canary-svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-prod
spec:
  selector:
    app: web
    stage: prod
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-pre-prod
spec:
  selector:
    app: web
    stage: pre-prod
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
