kubernetes-networks/core-dns-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: core-dns-tcp-lb
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: kube-dns
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.17.255.3
  ports:
  - protocol: TCP
    port: 53
    targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: core-dns-udp-lb
  namespace: kube-system
  annotations:
    metallb.universe.tf/allow-shared-ip: kube-dns
spec:
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
  loadBalancerIP: 172.17.255.3
  ports:
  - protocol: UDP
    port: 53
    targetPort: 53
