kubernetes-networks/dashboard-svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kube-system
spec:
  selector:
    app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
