kubernetes-networks/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: web-svc-prod
          servicePort: 8000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-pre-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "always"
    nginx.ingress.kubernetes.io/canary-by-header-value: "CUSTOM-HEADER"
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: web-svc-pre-prod
          servicePort: 8000
